force-app/main/default/objects/DocuSignConfig__mdt/DocuSignConfig__mdt.object-meta.xml
<CustomObject>
    <description>Parametres de configuration DocuSign (JWT, compte, template, webhook).</description>
    <label>DocuSign Config</label>
    <pluralLabel>DocuSign Configs</pluralLabel>
</CustomObject>