force-app/main/default/objects/DocuSignConfig__mdt/fields/AdminEmail__c.field-meta.xml
<CustomField>
    <fullName>AdminEmail__c</fullName>
    <label>Admin Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>