force-app/main/default/objects/DocuSignConfig__mdt/fields/BaseUri__c.field-meta.xml
<CustomField>
    <fullName>BaseUri__c</fullName>
    <label>Base Uri</label>
    <length>255</length>
    <type>Text</type>
</CustomField>