force-app/main/default/objects/DocuSignConfig__mdt/fields/DefaultTemplateId__c.field-meta.xml
<CustomField>
    <fullName>DefaultTemplateId__c</fullName>
    <label>Default Template Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>