force-app/main/default/objects/DocuSignConfig__mdt/fields/IntegrationKey__c.field-meta.xml
<CustomField>
    <fullName>IntegrationKey__c</fullName>
    <label>Integration Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>