force-app/main/default/objects/DocuSignConfig__mdt/fields/OauthBaseUri__c.field-meta.xml
<CustomField>
    <fullName>OauthBaseUri__c</fullName>
    <label>Oauth Base Uri</label>
    <length>255</length>
    <type>Text</type>
</CustomField>