force-app/main/default/objects/DocuSignConfig__mdt/fields/PrivateKey__c.field-meta.xml
<CustomField>
    <fullName>PrivateKey__c</fullName>
    <label>Private Key</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>