force-app/main/default/objects/DocuSignConfig__mdt/fields/SignerRoleName__c.field-meta.xml
<CustomField>
    <fullName>SignerRoleName__c</fullName>
    <label>Signer Role Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>