force-app/main/default/objects/DocuSignConfig__mdt/fields/WebhookSecret__c.field-meta.xml
<CustomField>
    <fullName>WebhookSecret__c</fullName>
    <label>Webhook Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>